tests/snapshots/integration_test__log_data@c2fc4b6a67f0967e852d0f2c28d3e1b2.snap
---
source: tests/integration_test.rs
description: "/home/jorge/github/auditd-parser/tests/data/synthetic/perm.log:4"
expression: result
info: "type=AVC msg=audit(1524662933.080:61207): perm=9"
---
{
  "record_type": "AVC",
  "timestamp": 1524662933080,
  "id": 61207,
  "fields": {
    "perm": [
      "exec",
      "attr"
    ]
  }
}
