tests/snapshots/integration_test__log_data@c635087adfdbe1e21261cf8ce5b97545.snap
---
source: tests/integration_test.rs
description: "/home/runner/work/auditd-parser/auditd-parser/tests/data/linux-audit-parser-rs/line-sockaddr-unknown-1.log:1"
expression: result
info: "type=SOCKADDR msg=audit(1670427457.195:550): saddr=00000000000000000000000000000000\u001dSADDR=unknown family"
---
{
  "Err": {
    "Parser": {
      "Parse": "error Eof at:  family"
    }
  }
}
