tests/snapshots/integration_test__log_data@c82495c5dab7b14d3e99ac5e72970a17.snap
---
source: tests/integration_test.rs
description: "/home/jorge/github/auditd-parser/tests/data/linux-audit-parser-rs/line-broken-subj1.log:1"
expression: result
info: "type=SYSCALL msg=audit(1634628127.584:166): arch=c000003e syscall=59 success=yes exit=0 a0=55b26d44a6a0 a1=55b26d44a878 a2=55b26d44a8e8 a3=7faeccab5850 items=2 ppid=659 pid=661 auid=4294967295 uid=0 gid=0 euid=0 suid=0 fsuid=0 egid=0 sgid=0 fsgid=0 tty=(none) ses=4294967295 comm=\"dhclient\" exe=\"/sbin/dhclient\" subj=/{,usr/}sbin/dhclient key=(null)"
---
{
  "record_type": "SYSCALL",
  "timestamp": 1634628127584,
  "id": 166,
  "fields": {
    "a0": "55b26d44a6a0",
    "a1": "55b26d44a878",
    "a2": "55b26d44a8e8",
    "a3": "7faeccab5850",
    "arch": "x86_64",
    "auid": null,
    "comm": "dhclient",
    "egid": "root",
    "euid": "root",
    "exe": "/sbin/dhclient",
    "exit": 0,
    "fsgid": "root",
    "fsuid": "root",
    "gid": "root",
    "items": "2",
    "key": null,
    "pid": "661",
    "ppid": "659",
    "ses": "4294967295",
    "sgid": "root",
    "subj": "/{,usr/}sbin/dhclient",
    "success": true,
    "suid": "root",
    "syscall": "59",
    "tty": null,
    "uid": "root"
  }
}
