tests/snapshots/integration_test__log_data@cdb115b0a054cc1b5a7d38940afc18fe.snap
---
source: tests/integration_test.rs
expression: record
info: "type=PROCTITLE msg=audit(1451781471.394:194438): proctitle=\"bash\""
---
{
  "record_type": "PROCTITLE",
  "timestamp": 1451781471394,
  "id": 194438,
  "fields": {
    "proctitle": "bash"
  }
}
